@@ -39,6 +39,7 @@
 <%= link_to "Ping履歴", {:action => "manage_don_ping"} %>/
 <%= link_to "RBL設定", {:action => "manage_don_rbl"} %>/
 <%= link_to "基本設定", {:action => "manage_don_env"} %>/
+<%= link_to "キャッシュ消去", {:action => "manage_cache"} %>/
 <%= link_to "(hnf保存)", {:action => "hnf_save_all"}, :confirm => "Really login for save hnf files?" %>/
 </div> <!-- end of class:head -->
 
